--- a/lab12_solution/roles/flask_db/tasks/main.yml
+++ b/lab12_solution/roles/flask_db/tasks/main.yml
@@ -21,6 +21,8 @@
 
 - name: load mysql dump
   shell: mysql --user=root --password='' < /tmp/students.sql
+  register: mysql_output
+  changed_when: false
   ignore_errors: true
 
 - name: start and enable mysql
