--- a/lab12_solution/ansible.cfg
+++ b/lab12_solution/ansible.cfg
@@ -2,4 +2,4 @@
 inventory = test
 roles_path = roles
 retry_files_enabled = False
-ansible_managed = Ansible managed: {file} on {host}
+ansible_managed = Ansible managed
