--- a/lab12_solution/roles/flask_app/handlers/main.yml
+++ b/lab12_solution/roles/flask_app/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: restart gunicorn
-  shell: pgrep gunicorn|xargs kill; rm /tmp/gunicorn.pid; '{{ flask_gunicorn_command }}'
+  shell: 'pgrep gunicorn|xargs kill; {{ flask_gunicorn_command }}'
