add become option

--- a/lab12_solution/ansible.cfg
+++ b/lab12_solution/ansible.cfg
@@ -3,3 +3,6 @@ inventory = test
 roles_path = roles
 retry_files_enabled = False
 ansible_managed = Ansible managed
+
+[privilege_escalation]
+become = True
