--- a/lab12_solution/roles/flask_app/tasks/main.yml
+++ b/lab12_solution/roles/flask_app/tasks/main.yml
@@ -92,3 +92,7 @@
   when: gunicorn_pid.stat.exists != True
   tags:
     - flask_app
+
+- name: show url
+  debug:
+    msg: 'http://{{ inventory_hostname }}:8000'
