Update to python3

--- a/lab12_solution/ansible.cfg
+++ b/lab12_solution/ansible.cfg
@@ -3,6 +3,7 @@ inventory = test
 roles_path = roles
 retry_files_enabled = False
 ansible_managed = Ansible managed
+interpreter_python = auto_silent
 
 [privilege_escalation]
 become = True
