--- a/lab12_solution/roles/flask_app/tasks/main.yml
+++ b/lab12_solution/roles/flask_app/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: load redhat variables
+  include_vars: redhat.yml
+  when: ansible_os_family == 'RedHat'
+
+- name: load debian variables
+  include_vars: debian.yml
+  when: ansible_os_family == 'Debian'
+
 - name: install git
   package:
     name: git
@@ -16,26 +24,15 @@
   tags:
     - flask_app
 
-- name: install all pip packages
-  pip:
-    name: '{{ item }}'
-    state: present
-  with_items:
-    - flask
-    - flask-mysql
-    - markupsafe
-  tags:
-    - flask_app
-
 - name: install red hat packages
   yum:
     name: '{{ item }}'
     state: present
-  with_items:
-    - python-devel
-    - python-pip
+  loop:
+    - python3-devel
+    - python3-pip
     - MySQL-python
-    - python-gunicorn
+    - python3-gunicorn
   when: ansible_os_family == "RedHat"
   tags:
     - flask_app
@@ -44,14 +41,27 @@
   apt:
     name: '{{ item }}'
     state: present
-  with_items:
-    - libmysqlclient-dev
-    - python-dev
-    - python-pip
-    - gunicorn
+  loop:
+    - python3-dev
+    - python3-pip
+    - python3-gunicorn
+    - gunicorn3
   when: ansible_os_family == "Debian"
   tags:
     - flask_app
+
+- name: install all pip packages
+  pip:
+    name: '{{ item }}'
+    state: present
+    executable: pip3
+  loop:
+    - flask
+    - flask-mysql
+    - markupsafe
+  tags:
+    - flask_app
+
 
 - name: create version file
   template:
